# duckduckgo-mcp-server

./: .env.example  .gitignore  CLAUDE.md  pyproject.toml
src/duckduckgo_mcp_server/: server.py  test_e2e.py  test_server.py
