[project]
name = "duckduckgo-mcp-server"
version = "0.3.0"
description = "MCP Server for searching via DuckDuckGo"
readme = "README.md"
authors = [{ name = "Nick Clyde", email = "nick@clyde.tech" }]
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.13.3",
    "httpx>=0.28.1",
    "httpcore>=1.0.8",
    "mcp[cli]>=1.26.0",
    "primp>=1.2.3",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

[project.urls]
Homepage = "https://github.com/nickclyde/duckduckgo-mcp-server"
Issues = "https://github.com/nickclyde/duckduckgo-mcp-server/issues"

# Optional extras. Install with e.g. `pip install duckduckgo-mcp-server[browser]`.
[project.optional-dependencies]
# Enables the `--fetch-backend curl` option (and `auto` fallback), which uses
# curl_cffi to impersonate a real browser's TLS fingerprint so fetch_content
# can pass through TLS-fingerprint-based bot filters. Not needed for basic use.
browser = ["curl_cffi>=0.7.0"]

[project.scripts]
duckduckgo-mcp-server = "duckduckgo_mcp_server.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "anyio>=4.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=0.25.0",
]
